# PlatformerMuhittin

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_ttf.cmake
res/maps/: level1.map  level1.mpa
src/: CMakeLists.txt  application.cc  application.h  graphics.cc  graphics.h  main.cc
src/game/: gameobject.h  player.cc  player.h  tile.cc  tile.h  tilemap.cc  tilemap.h
src/math/: vec2.cc  vec2.h
src/states/: button.h  gamestate.cc  gamestate.h  level1.cc  level1.h  menu.cc  menu.h  splash.cc  splash.h
src/util/: fileutil.h
