set(CMAKE_CXX_FLAGS "-Wall -Wno-write-strings -std=c++11")
file(GLOB SRCS *.cc states/*.cc  math/*.cc game/*.cc)
add_executable(${PROJECT_NAME} ${SRCS})
set(CMAKE_DIR "../cmake")
include(${CMAKE_DIR}/FindSDL2.cmake)
include(${CMAKE_DIR}/FindSDL2_image.cmake)
include(${CMAKE_DIR}/FindSDL2_ttf.cmake)
include_directories(${SDL2_INCLUDE_DIRS} ${SDL2IMAGE_INCLUDE_DIR} ${SDL2TTF_INCLUDE_DIR})
target_link_libraries(${PROJECT_NAME} ${SDL2_LIBRARIES} ${SDL2IMAGE_LIBRARY} ${SDL2TTF_LIBRARY})
